--- a/paper/dotaligner.bib
+++ b/paper/dotaligner.bib
@@ -32,6 +32,16 @@ title = {{Rfam 11.0: 10 years of \{RNA\} families.}},
 volume = {41},
 year = {2013}
 }
+@article{Dotu19908358,
+abstract = {We describe several dynamic programming segmentation algorithms to segment RNA secondary and tertiary structures into distinct domains. For this purpose, we consider fitness functions that variously depend on (i) base pairing probabilities in the Boltzmann low energy ensemble of structures, (ii) contact maps inferred from 3-dimensional structures, and (iii) Voronoi tessellation computed from 3-dimensional structures. Segmentation algorithms include a direct dynamic programming method, previously discovered by Bellman and by Finkelstein and Roytberg, as well as two novel algorithms - a parametric algorithm to compute the optimal segmentation into k classes, for each value k, and an algorithm that simultaneously computes the optimal segmentation of all subsegments. Since many non-coding RNA gene finders scan the genome by a moving window method, reporting high-scoring windows, we apply structural segmentation to determine the most likely 5' and 3' boundaries of precursor microRNAs. When tested on all precursor microRNAs of length at most 100 nt from the Rfam database, benchmarking studies indicate that segmentation determines the 5' boundary with discrepancy (absolute value of difference between predicted and real boundaries) having mean -0.640 (stdev 15.196) and the 3' boundary with discrepancy having mean -0.266 (stdev. 17.415). This yields a sensitivity of 0.911 and positive predictive value of 0.906 for determination of exact boundaries of precursor microRNAs within a window of approximately 900 nt. Additionally, by comparing the manual segmentation of Jaeger et al. with our optimal structural segmentation of 16S and 16S-like rRNA of E. coli, rat mitochondria, Halobacterium volcanii, and Chlamydomonas reinhardii chloroplast into 4 segments, we establish the usefulness of (automated) structural segmentation in decomposing large RNA structures into distinct domains.},
+author = {Dotu, I and Lorenz, W A and {Van Hentenryck}, P and Clote, P},
+file = {:media/data/phd/literature/Dotu19908358.pdf:pdf},
+journal = {Pac Symp Biocomput},
+pages = {57--68},
+pmid = {19908358},
+title = {{\{RNA\} structural segmentation.}},
+year = {2010}
+}
 @article{Gardner15860779,
 abstract = {To date, few attempts have been made to benchmark the alignment algorithms upon nucleic acid sequences. Frequently, sophisticated PAM or BLOSUM like models are used to align proteins, yet equivalents are not considered for nucleic acids; instead, rather ad hoc models are generally favoured. Here, we systematically test the performance of existing alignment algorithms on structural RNAs. This work was aimed at achieving the following goals: (i) to determine conditions where it is appropriate to apply common sequence alignment methods to the structural RNA alignment problem. This indicates where and when researchers should consider augmenting the alignment process with auxiliary information, such as secondary structure and (ii) to determine which sequence alignment algorithms perform well under the broadest range of conditions. We find that sequence alignment alone, using the current algorithms, is generally inappropriate <50-60\% sequence identity. Second, we note that the probabilistic method ProAlign and the aging Clustal algorithms generally outperform other sequence-based algorithms, under the broadest range of applications.},
 author = {Gardner, P P and Wilm, A and Washietl, S},
@@ -73,14 +83,6 @@ title = {{GraphClust: alignment-free structural clustering of local \{RNA\} seco
 volume = {28},
 year = {2012}
 }
-@article{Hofacker:Bernhart:Stadler:Align_RNA_base:2004,
-abstract = {MOTIVATION: Many classes of functional RNA molecules are characterized by highly conserved secondary structures but little detectable sequence similarity. Reliable multiple alignments can therefore be constructed only when the shared structural features are taken into account. Since multiple alignments are used as input for many subsequent methods of data analysis, structure based alignments are an indispensable necessity in RNA bioinformatics. RESULTS: We present here a method to compute pairwise and progressive multiple alignments from the direct comparison of basepairing probability matrices. Instead of attempting to solve the folding and the alignment problem simultaneously as in the classical Sankoff algorithm we use McCaskill's approach to compute base pairing probability matrices which effectively incorporate the information on the energetics of each sequences. A novel, simplified variant of Sankoff's algorithms can then be employed to extract the maximum weight common secondary structure and an associated alignment. AVAILABILITY: The programs pmcomp and pmmulti described in this contribution are implemented in Perl and can be downloaded together with the example data sets from http://www.tbi.univie.ac.at/RNA/PMcomp/. A web server is available at http://rna.tbi.univie.ac.at/cgi-bin/pmcgi.pl.},
-author = {Hofacker, I L and Bernhart, S H and Stadler, P F},
-file = {:media/data/phd/literature/Hofacker15073017.pdf:pdf},
-journal = {Bioinformatics},
-title = {{Alignment of RNA base pairing probability matrices}},
-year = {2004}
-}
 @article{Hofacker15073017,
 abstract = {MOTIVATION: Many classes of functional RNA molecules are characterized by highly conserved secondary structures but little detectable sequence similarity. Reliable multiple alignments can therefore be constructed only when the shared structural features are taken into account. Since multiple alignments are used as input for many subsequent methods of data analysis, structure-based alignments are an indispensable necessity in RNA bioinformatics. RESULTS: We present here a method to compute pairwise and progressive multiple alignments from the direct comparison of base pairing probability matrices. Instead of attempting to solve the folding and the alignment problem simultaneously as in the classical Sankoff's algorithm, we use McCaskill's approach to compute base pairing probability matrices which effectively incorporate the information on the energetics of each sequences. A novel, simplified variant of Sankoff's algorithms can then be employed to extract the maximum-weight common secondary structure and an associated alignment. AVAILABILITY: The programs pmcomp and pmmulti described in this contribution are implemented in Perl and can be downloaded together with the example datasets from $\backslash$verb+http://www.tbi.univie.ac.at/RNA/PMcomp/.+ A web server is available at $\backslash$verb+http://rna.tbi.univie.ac.at/cgi-bin/pmcgi.pl+},
 author = {Hofacker, I L and Bernhart, S H and Stadler, P F},
@@ -95,17 +97,25 @@ title = {{Alignment of \{RNA\} base pairing probability matrices.}},
 volume = {20},
 year = {2004}
 }
-@article{Knudsen:Hein:Pfold_RNA_secon:NAR2003,
-abstract = {RNA secondary structures are important in many biological processes and efficient structure prediction can give vital directions for experimental investigations. Many available programs for RNA secondary structure prediction only use a single sequence at a time. This may be sufficient in some applications, but often it is possible to obtain related RNA sequences with conserved secondary structure. These should be included in structural analyses to give improved results. This work presents a practical way of predicting RNA secondary structure that is especially useful when related sequences can be obtained. The method improves a previous algorithm based on an explicit evolutionary model and a probabilistic model of structures. Predictions can be done on a web server at http://www.daimi.au.dk/\~{}compbio/pfold.},
-author = {Knudsen, Bjarne and Hein, Jotun},
-file = {:media/data/phd/literature/Knudsen12824339.pdf:pdf},
-journal = {Nucleic Acids Research},
-number = {13},
-pages = {3423--3428},
-pmid = {12824339},
-title = {{\{Pfold\}: \{RNA\} secondary structure prediction using stochastic context-free grammars}},
-volume = {31},
-year = {2003}
+@article{Hofacker:Bernhart:Stadler:Align_RNA_base:2004,
+abstract = {MOTIVATION: Many classes of functional RNA molecules are characterized by highly conserved secondary structures but little detectable sequence similarity. Reliable multiple alignments can therefore be constructed only when the shared structural features are taken into account. Since multiple alignments are used as input for many subsequent methods of data analysis, structure based alignments are an indispensable necessity in RNA bioinformatics. RESULTS: We present here a method to compute pairwise and progressive multiple alignments from the direct comparison of basepairing probability matrices. Instead of attempting to solve the folding and the alignment problem simultaneously as in the classical Sankoff algorithm we use McCaskill's approach to compute base pairing probability matrices which effectively incorporate the information on the energetics of each sequences. A novel, simplified variant of Sankoff's algorithms can then be employed to extract the maximum weight common secondary structure and an associated alignment. AVAILABILITY: The programs pmcomp and pmmulti described in this contribution are implemented in Perl and can be downloaded together with the example data sets from http://www.tbi.univie.ac.at/RNA/PMcomp/. A web server is available at http://rna.tbi.univie.ac.at/cgi-bin/pmcgi.pl.},
+author = {Hofacker, I L and Bernhart, S H and Stadler, P F},
+file = {:media/data/phd/literature/Hofacker15073017.pdf:pdf},
+journal = {Bioinformatics},
+title = {{Alignment of RNA base pairing probability matrices}},
+year = {2004}
+}
+@article{Knudsen:Hein:RNA_secon_struc:1999,
+abstract = {MOTIVATION: Many computerized methods for RNA secondary structure prediction have been developed. Few of these methods, however, employ an evolutionary model, thus relevant information is often left out from the structure determination. This paper introduces a method which incorporates evolutionary history into RNA secondary structure prediction. The method reported here is based on stochastic context-free grammars (SCFGs) to give a prior probability distribution of structures. RESULTS: The phylogenetic tree relating the sequences can be found by maximum likelihood (ML) estimation from the model introduced here. The tree is shown to reveal information about the structure, due to mutation patterns. The inclusion of a prior distribution of RNA structures ensures good structure predictions even for a small number of related sequences. Prediction is carried out using maximum a posteriori estimation (MAP) estimation in a Bayesian approach. For small sequence sets, the method performs very well compared to current automated methods.},
+author = {Knudsen, B and Hein, J},
+file = {:media/data/phd/literature/Knudsen10383470.pdf:pdf},
+journal = {Bioinformatics},
+number = {6},
+pages = {446--454},
+pmid = {10383470},
+title = {{\{RNA\} secondary structure prediction using stochastic context-free grammars and evolutionary history}},
+volume = {15},
+year = {1999}
 }
 @article{McCaskill:1990,
 abstract = {A novel application of dynamic programming to the folding problem for RNA enables one to calculate the full equilibrium partition function for secondary structure and the probabilities of various substructures. In particular, both the partition function and the probabilities of all base pairs are computed by a recursive scheme of polynomial order N3 in the sequence length N. The temperature dependence of the partition function gives information about melting behavior for the secondary structure. The pair binding probabilities, the computation of which depends on the partition function, are visually summarized in a "box matrix" display and this provides a useful tool for examining the full ensemble of probable alternative equilibrium structures. The calculation of this ensemble representation allows a proper application and assessment of the predictive power of the secondary structure method, and yields important information on alternatives and intermediates in addition to local information about base pair opening and slippage. The results are illustrated for representative tRNA, 5S RNA, and self-replicating and self-splicing RNA molecules, and allow a direct comparison with enzymatic structure probes. The effect of changes in the thermodynamic parameters on the equilibrium ensemble provides a further sensitivity check to the predictions. ------------------------------ Remark: error in equation (7) - term for internal loops must be multiplied by Qb[h][l]},
@@ -201,14 +211,4 @@ pmid = {17432929},
 title = {{Inferring noncoding \{RNA\} families and classes by means of genome-scale structure-based clustering.}},
 volume = {3},
 year = {2007}
-}
-@article{Dotu19908358,
-abstract = {We describe several dynamic programming segmentation algorithms to segment RNA secondary and tertiary structures into distinct domains. For this purpose, we consider fitness functions that variously depend on (i) base pairing probabilities in the Boltzmann low energy ensemble of structures, (ii) contact maps inferred from 3-dimensional structures, and (iii) Voronoi tessellation computed from 3-dimensional structures. Segmentation algorithms include a direct dynamic programming method, previously discovered by Bellman and by Finkelstein and Roytberg, as well as two novel algorithms - a parametric algorithm to compute the optimal segmentation into k classes, for each value k, and an algorithm that simultaneously computes the optimal segmentation of all subsegments. Since many non-coding RNA gene finders scan the genome by a moving window method, reporting high-scoring windows, we apply structural segmentation to determine the most likely 5' and 3' boundaries of precursor microRNAs. When tested on all precursor microRNAs of length at most 100 nt from the Rfam database, benchmarking studies indicate that segmentation determines the 5' boundary with discrepancy (absolute value of difference between predicted and real boundaries) having mean -0.640 (stdev 15.196) and the 3' boundary with discrepancy having mean -0.266 (stdev. 17.415). This yields a sensitivity of 0.911 and positive predictive value of 0.906 for determination of exact boundaries of precursor microRNAs within a window of approximately 900 nt. Additionally, by comparing the manual segmentation of Jaeger et al. with our optimal structural segmentation of 16S and 16S-like rRNA of E. coli, rat mitochondria, Halobacterium volcanii, and Chlamydomonas reinhardii chloroplast into 4 segments, we establish the usefulness of (automated) structural segmentation in decomposing large RNA structures into distinct domains.},
-author = {Dotu, I and Lorenz, W A and {Van Hentenryck}, P and Clote, P},
-file = {:media/data/phd/literature/Dotu19908358.pdf:pdf},
-journal = {Pac Symp Biocomput},
-pages = {57--68},
-pmid = {19908358},
-title = {{\{RNA\} structural segmentation.}},
-year = {2010}
 }
