--- a/paper/dotaligner.tex
+++ b/paper/dotaligner.tex
@@ -140,7 +140,7 @@ in sequence $S_a$ to each nucleotide in sequence $S_b$; and (2) find best path
 through the distance matrix generated in 1. The iteration is stopped when no
 more gaps are introduced in step 2. This algorithm runs in $O(n^2)$, hence, in
 the same time complexity as the sequence-based alignments.  In the following we
-discuss in more detail how the algorithm works.
+discuss in detail how the algorithm works.
 
 As described in \cite{Palu2010} the weight $Z$ of alignment \emph{A} of two
 arc-annotated sequences $(S_a,P_a)$ and $(S_b,P_b)$ is defined by
@@ -148,14 +148,15 @@ arc-annotated sequences $(S_a,P_a)$ and $(S_b,P_b)$ is defined by
 \begin{equation}\label{eq1}
 	Z(A) = \sum_{(i,i^\prime) \in A} \sigma(i,i^\prime) + \sum_{(i,j) \in
 	P_a,\atop {(i^\prime,j^\prime) \in P_b,\atop {(i,i^\prime) \in
-	A, (i,j^\prime) \in A}}} \tau(i,j,i^\prime,j^\prime) + \gamma
+	A, (j,j^\prime) \in A}}} \tau(i,j,i^\prime,j^\prime) + \gamma
 	\times L,
 \end{equation}
 
 where $S$ is a sequence and $P$ is a base pairing probability matrix,
 $\sigma(i,i^\prime)$ is the similarity of sequence positions $S_a[i]$ and
 $S_b[i^\prime]$, $\tau(i,j,i^\prime,j^\prime)$ is the similarity of arcs $(i,j)
-\in P_a$ and $(i^\prime,j^\prime) \in P_b$ ($\tau(i,j,i^\prime,j^\prime) = 1 - | P_a(i,j)-P_b(i^\prime,j^\prime) |$), and $\gamma$ is the gap cost
+\in P_a$ and $(i^\prime,j^\prime) \in P_b$ ($\tau(i,j,i^\prime,j^\prime) = 1 -
+2 \times | P_a(i,j)-P_b(i^\prime,j^\prime) |$), and $\gamma$ is the gap cost
 associated with each sequence position that is not matched ($L =
 |S_a|+|S_b|-2|A|$). The alignment problem finds the maximal $Z(A)$. As its
 solution is MAX-SNP-hard we implemented a heuristic of the alignment problem in
@@ -178,7 +179,8 @@ solution is MAX-SNP-hard we implemented a heuristic of the alignment problem in
 \begin{equation}\label{eq2}
 \begin{array}{rl}
 	Z(A|i,i^\prime) = & \alpha \times \sigma(i,i^\prime) + \\
-	& \beta \times \sum_{k=1}^N \sum_{l=1}^M \tau(i,k,i^\prime,l) + \\
+%	& \beta \times \sum_{k=1}^N \sum_{l=1}^M \tau(i,k,i^\prime,l) + \\
+	& \beta \times \sum_{(i,j) \in P_a,\atop {(i^\prime,j^\prime) \in P_b,\atop {(j,j^\prime) \in A}}} \tau(i,j,i^\prime,j^\prime) + \\
 	& \gamma \times L
 %NW[P_a(x_{i1} \ldots x_{iN}),P_b(y_{j1} \ldots y_{jM})]
 \end{array}
@@ -192,17 +194,17 @@ solution is MAX-SNP-hard we implemented a heuristic of the alignment problem in
 \STATE
 \vspace{-15px}
 \begin{equation}\label{eq3}
-D_{ij} = max \begin{cases}
+H_{ij} = max \begin{cases}
 	0 \\
-	D_{i-1 j} + \gamma \\
-	D_{i-1 j-1} + Z(A|i-1,j-1) \\
-	D_{i j-1} + \gamma
+	H_{i-1 j} + \gamma \\
+	H_{i-1 j-1} + Z(A|i-1,j-1) \\
+	H_{i j-1} + \gamma
 \end{cases}
 \end{equation}
 \vspace{-10px}
 \ENDFOR
 \ENDFOR
-\STATE $A(S_a,S_b) = BACKTRACKING(D)$
+\STATE $A(S_a,S_b) = BACKTRACKING(H)$
 \STATE Remove gaps in $A(S_a,S_b)$ from $(S_a,P_a)$ and $(S_b,P_b)$ 
 \UNTIL gaps in $A(S_a,S_b) == 0$
 %\end{courier}
@@ -236,26 +238,49 @@ of the two dotplots is calculated by
 where $Z(A|i,i^\prime,\gamma=0)$ is equal to equation \ref{eq2} without the gap
 term, and $L = |S_a|+|S_b|-2|A|$.
 
-The robustness of the alignments can be improved by replacing $P(i,i^\prime)$ with 
+The robustness of the alignments can be improved by applying log-odds scores of
+having a specific base pairing against the null model of a random pairing
+\cite{Will17432929}.  Here, we replace $P(i,i^\prime)$ with 
 
 \begin{equation}
-\Psi_{i,i^\prime} = log \frac{P(i,i^\prime)}{p_0} / log \frac{1}{p_0} 
+	\Psi_{i,i^\prime} = log \frac{P(i,i^\prime)}{p_0(i,i^\prime)} / log
+	\frac{1}{p_0(i,i^\prime)} 
 \end{equation}
 
-where $p_0$ is the expected probability for a pairing to occur at random (use
-ribosomal basepair substitution matrix from \texttt{Pfold}
-\cite{Knudsen:Hein:Pfold_RNA_secon:NAR2003}). $\Psi$ was firstly introduced in
-\cite{Will17432929}. The term $ log \frac{P(i,i^\prime)}{p_0}$ is the log-odds
-score for having a specific base pairing against the null model of a random
-pairing, and $log \frac{1}{p_0}$ is a normalization factor that transforms the
-scores to a maximum of 1. $P==1$ results in $\Psi=1$, $P>p_0$ results in
-$\Psi>0$, $P==p_0$ results in $\Psi=0$, and $P<p_0$ results in $\Psi<0$. This
+where $p_0(i,i^\prime)$ is the expected probability for a pairing to occur at
+random (use ribosomal paired probability matrix
+\cite{Knudsen:Hein:RNA_secon_struc:1999}). The term $log
+\frac{1}{p_0(i,i^\prime)}$ is a normalization factor that transforms the scores
+to a maximum of 1. $P==1$ results in $\Psi=1$, $P>p_0$ results in $\Psi>0$,
+$P==p_0$ results in $\Psi=0$, and $P<p_0$ results in $\Psi<0$. This
 transformation gives larger dissimilarities if low basepair probabilities are
-involved, but relatively lower dissimilarities if two high basepair probabilities
-are compared.
+involved, but relatively lower dissimilarities if two high basepair
+probabilities are compared. Unpaired probabilities can be transformed in a
+similar fashion by
 
-The proposed algorithm can be optimized by different adaptations which will be
-evaluated in the result section:
+\begin{equation}
+	\omega(i) = log \frac{1 - \sum_k P(i,k)}{p_0(i)} / log \frac{1}{p_0(i)}
+\end{equation}
+
+where $p_0(i)$ is the expected probability for an unpaired base to occur at
+random (use ribosomal unpaired probabilities
+\cite{Knudsen:Hein:RNA_secon_struc:1999}). Our model is based on structure
+similarity, however, the sequence similarity $\sigma$ may be important in
+unpaired regions, \eg{} hairpin loops. Therefore, we weight matching nucleotides
+by the similarity of their unpaired probabilities:
+
+\begin{equation}
+	\sigma(i,i^\prime) = \left\{ \begin{array}{cl}
+			1 - 2 \times | \omega(i) - \omega(i^\prime) | & \textrm{if }i == i^\prime \\
+			0 & \textrm{else}
+		\end{array}\right.
+\end{equation}
+
+\noindent By doing so, sequence similarity gets highest weight if the base in both
+sequences is likely to be unpaired.
+
+Finally, the proposed algorithm can be optimized by different parameters which
+will be evaluated in the result section:
 
 \begin{enumerate}
 \item weight of sequence similarity (optimize $\alpha$)
