1st version of super slow local dotaligner

--- a/paper/dotaligner.tex
+++ b/paper/dotaligner.tex
@@ -304,7 +304,7 @@ all gaps (optimize $\alpha$ and $\beta$)
 \subsection{Speed up}
 
 To achieve a very fast method that can be applied on a large amount of pairwise
-comparisons, \eg{} a set of 2,000 RNA sequences requires $2 \times 10^6$
+comparisons, \eg{} a set of 2,000 RNA sequences requires $2 \times 10^6 - 1,000$
 comparisons, we implemented two complementary strategies:
 \begin{enumerate}
 \item set maximal allowed shift of two input sequences in the final alignment
