--- a/analysis/parametertuning/README
+++ b/analysis/parametertuning/README
@@ -8,64 +8,113 @@ mkdir ${PTDOTALIGNER}/data/rfam_pairwise_threesomes
 ./runDotAligner4Tuning.sh > testit.sh
 split -l 1512 -a 3 -d testit.sh ${PTDOTALIGNER}/jobs/dotaligner4tuning
 rm testit.sh
-for i in `perl -e '{for(my $i=0; $i<192; $i++){printf("%03i ",$i)}}'`; do cat jobs/dotaligner4tuning${i} | awk -v i=$i '{gsub("dotaligner.out","dotaligner"i".out"); print $0}' > tmp.out; mv tmp.out jobs/dotaligner4tuning${i}; j=`echo "" | awk -v i=$i '{print ++i}'`; mv jobs/dotaligner4tuning${i} jobs/dotaligner4tuning_${j}; done
+for i in `perl -e '{for(my $i=191; $i>=0; $i--){printf("%03i ",$i)}}'`; do cat jobs/dotaligner4tuning${i} | awk -v i=$i '{gsub("dotaligner.out","dotaligner"i".out"); print $0}' > tmp.out; mv tmp.out jobs/dotaligner4tuning${i}; j=`echo "" | awk -v i=$i '{print i+1}'`; mv jobs/dotaligner4tuning${i} jobs/dotaligner4tuning_${j}; done
 chmod 744 jobs/dotaligner4tuning*
 #submit jobs
 qsub -q all.q -N da4tun -t 1-192 job_launch_dotaligner.sge
+for i in `perl -e '{for(my $i=191; $i>=0; $i--){printf("%03i ",$i)}}'`; do wc -l dotaligner${i}.out; done
 
 #merge results
-cat dotaligner*.out | gzip > ${PTDOTALIGNER}/output/dotaligner4tuning.out.gz
+for i in `perl -e '{for(my $i=0; $i<=191; $i++){printf("%03i ",$i)}}'`; do cat dotaligner${i}.out | gzip >> ${PTDOTALIGNER}/output/dotaligner4tuning.out.gz; done
 gunzip -c ${PTDOTALIGNER}/output/dotaligner4tuning.out.gz | awk 'BEGIN{OFS=","}{ if($1=="PARAMETER"){ seq=""; split($2,x,"/");f1=x[length(x)];if(gsub("_","_",x[length(x)])==3){split(x[length(x)],y,"_");sub(".pp","",y[4]);pid=y[4]}; split($3,x,"/");f2=x[length(x)];if(gsub("_","_",x[length(x)])==3){split(x[length(x)],y,"_");sub(".pp","",y[4]);pid=y[4]}; k=$5; a=$7; b=$9; r=$11; t=$13; l=$15; s=$17; m=$19; seqaln=$21 }else{ if($1=="Similarity"){ sub(/,$/,"",$3);sim=$3 }else{ if($1~/^[AUGC-]/){ seq=seq","$1 }else{ if($1=="user"){ split($2,c,"m");sub("s","",c[2]);time=60*c[1]+c[2] }else{ if($1=="sys"){ sub(/^,/,"",seq); print f1,f2,pid,k,a,b,r,t,l,s,m,seqaln,sim,seq,time }}}}} }' | gzip > ${PTDOTALIGNER}/output/dotaligner4tuning.out.csv.gz
 
 #calculate SPS (sum-of-pairs score)
 for i in `perl -e 'for($i=6; $i<=252; $i+=6){print $i." "}'`; do
   head -${i} ${PTDOTALIGNER}/rfam_pairwise_threesomes.fasta | tail -6 | awk '{if(NR==1 || NR==2 || NR==4 || NR==5){print $0}else{gsub(/</,"(");gsub(/>/,")");print ">structure\n"$0}}' > tmp.rfam_pairwise_threesomes.fasta;
   FNAME=`awk 'BEGIN{idx=1}/^>/{sub(/^>/,"");fname[idx]=$1;idx++}END{print fname[1]"__"fname[3]}' tmp.rfam_pairwise_threesomes.fasta`
-  removeGapsInFasta.pl tmp.rfam_pairwise_threesomes.fasta > ref_${FNAME}.fa;
-  awk 'NR==1 || NR==2 || NR==5 || NR==6{print $0}' ref_${FNAME}.fa > ref_${FNAME}.fasta;
+  removeGapsInFasta.pl tmp.rfam_pairwise_threesomes.fasta > rdraw some beautiful graphs
+ef_${fname}.fa;
+  awk 'nr==1 || nr==2 || nr==5 || nr==6{print $0}' ref_${fname}.fa > ref_${fname}.fasta;
 done
 rm -f tmp.sps.txt
-gunzip -c ${PTDOTALIGNER}/output/dotaligner4tuning.out.csv.gz | sed 's/\.pp//g' | while read LINE; do
-  RFAM1=${LINE%%,*};
-  TEMP=${LINE#*,};
-  RFAM2=${TEMP%%,*};
-  echo $LINE | awk -F "," '{gsub("-",".",$14);gsub("-",".",$15);print ">"$1"\n"$14"\n>"$2"\n"$15}' > test_aln.fa
-  getSPS.pl ref_${RFAM1}__${RFAM2}.fasta test_aln.fa >> tmp.sps.txt
+gunzip -c ${ptdotaligner}/output/dotaligner4tuning.out.csv.gz | sed 's/\.pp//g' | while read line; do
+  rfam1=${line%%,*};
+  temp=${line#*,};
+  rfam2=${temp%%,*};
+  echo $line | awk -f "," '{gsub("-",".",$14);gsub("-",".",$15);print ">"$1"\n"$14"\n>"$2"\n"$15}' > test_aln.fa
+  getsps.pl ref_${rfam1}__${rfam2}.fasta test_aln.fa >> tmp.sps.txt
 done
-paste <(gunzip -c ${PTDOTALIGNER}/output/dotaligner4tuning.out.csv.gz) tmp.sps.txt | awk '{print $1","$4}' | gzip > tmp.dotaligner4tuning.csv.gz
-mv tmp.dotaligner4tuning.csv.gz ${PTDOTALIGNER}/output/dotaligner4tuning.out.csv.gz
+paste <(gunzip -c ${ptdotaligner}/output/dotaligner4tuning.out.csv.gz) tmp.sps.txt | awk '{print $1","$4}' | gzip > tmp.dotaligner4tuning.csv.gz
+mv tmp.dotaligner4tuning.csv.gz ${ptdotaligner}/output/dotaligner4tuning.out.csv.gz
 
-#calculate SCI (structure conservation index) based on free energy of the thermodynamic ensemble 
-#using RNAalifold for pairwise alignment and RNAfold for single sequences
+#calculate sci (structure conservation index) based on free energy of the thermodynamic ensemble 
+#using rnaalifold for pairwise alignment and rnafold for single sequences
+for i in ${ptdotaligner}/data/rfam_pairwise_threesomes/*.fasta; do
+  rnafold -p2 < $i 2> /dev/null | sed -n 4p | awk -v id=$i '{sub(/\[/,"",$nf);sub(/\]/,"",$nf); print id,$nf}' >> ${ptdotaligner}/data/rfam_pairwise_threesomes/rfam_pairwise_threesomes.energyensemble;
+done
 rm -f tmp.sci.txt
-gunzip -c ${PTDOTALIGNER}/output/dotaligner4tuning.out.csv.gz | sed 's/\.pp//g' | while read LINE; do
-  echo $LINE | awk -F "," '{gsub("-",".",$14);gsub("-",".",$15);print ">"$1"\n"$14"\n>"$2"\n"$15}' | fa2aln.pl - > test_aln.aln
-  ALIENERGYENSEMBLE=`RNAalifold -p -d2 --noLP < test_aln.aln 2> /dev/null | sed -n 3p | awk '{sub(/\[/,"",$NF);sub(/\]/,"",$NF); print $NF}'` 
-  RNAfold -p -d2 --noLP < test_aln.aln 2> /dev/null > tmp.rnafold.out
-  SEQ1ENERGYENSEMBLE=`sed -n 8p tmp.rnafold.out | awk '{sub(/\[/,"",$NF);sub(/\]/,"",$NF); print $NF}'`
-  SEQ2ENERGYENSEMBLE=`sed -n 13p tmp.rnafold.out | awk '{sub(/\[/,"",$NF);sub(/\]/,"",$NF); print $NF}'`
-  echo "SCI" | awk -v econs=$ALIENERGYENSEMBLE -v eseq1=$SEQ1ENERGYENSEMBLE -v eseq2=$SEQ2ENERGYENSEMBLE '{ printf("%6.5f\n", 2 * econs / ( eseq1 + eseq2 ) ) }' >> tmp.sci.txt
+data=${ptdotaligner}/data/rfam_pairwise_threesomes
+gunzip -c ${ptdotaligner}/output/dotaligner4tuning.out.csv.gz | sed 's/\.pp//g' | while read line; do
+  rfam1=${line%%,*};
+  temp=${line#*,};
+  rfam2=${temp%%,*};
+  echo $line | awk -f "," '{gsub("-",".",$14);gsub("-",".",$15);print ">"$1"\n"$14"\n>"$2"\n"$15}' | fa2aln.pl - > test_aln.aln
+  alienergyensemble=`rnaalifold -p2 -r < test_aln.aln 2> /dev/null | sed -n 3p | awk '{sub(/\[/,"",$nf);sub(/\]/,"",$nf); print $nf}'`
+  seq1energyensemble=`grep $rfam1 ${data}/rfam_pairwise_threesomes.energyensemble | cut -d" " -f2`
+  seq2energyensemble=`grep $rfam2 ${data}/rfam_pairwise_threesomes.energyensemble | cut -d" " -f2`
+  echo "sci" | awk -v econs=$alienergyensemble -v eseq1=$seq1energyensemble -v eseq2=$seq2energyensemble '{ printf("%5.3f\t%5.3f\t%5.3f\t%6.5f\n", econs, eseq1, eseq2, (2 * econs / ( eseq1 + eseq2 ))) }' >> tmp.sci.txt
 done
-paste <(gunzip -c ${PTDOTALIGNER}/output/dotaligner4tuning.out.csv.gz) tmp.sci.txt | awk '{print $1","$2}' | gzip > tmp.dotaligner4tuning.csv.gz
-mv tmp.dotaligner4tuning.csv.gz ${PTDOTALIGNER}/output/dotaligner4tuning.out.csv.gz
+paste <(gunzip -c ${ptdotaligner}/output/dotaligner4tuning.out.csv.gz) tmp.sci.txt | awk '{print $1","$2}' | gzip > tmp.dotaligner4tuning.csv.gz
+mv tmp.dotaligner4tuning.csv.gz ${ptdotaligner}/output/dotaligner4tuning.out.csv.gz
 
-#calculate MCC of Rfam consensus structure to RNAalifold structure
+#calculate mcc of rfam consensus structure to rnaalifold structure
 rm -f tmp.mcc.txt
-gunzip -c ${PTDOTALIGNER}/output/dotaligner4tuning.out.csv.gz | sed 's/\.pp//g' | while read LINE; do
-  RFAM1=${LINE%%,*};
-  TEMP=${LINE#*,};
-  RFAM2=${TEMP%%,*};
-  #removeBPInAlignment.pl ref_${RFAM1}__${RFAM2}.fa | awk 'BEGIN{ORS=""}{if(NR==1 || NR==5){ sub(/^>/,"");print $1"\t" }else{ if(NR==2 || NR==6 ){ gsub(/\./,"-");print $1"\t" }else{ if(NR==4 || NR==8){ print $1"\n" } } }}' > ref.ccinput
-  awk 'BEGIN{ORS=""}{if(NR==1 || NR==5){ sub(/^>/,"");print $1"\t" }else{ if(NR==2 || NR==6 ){ gsub(/\./,"-");print $1"\t" }else{ if(NR==4 || NR==8){ print $1"\n" } } }}' ref_${RFAM1}__${RFAM2}.fa > ref.ccinput
-  echo $LINE | awk -F "," '{gsub("-",".",$14);gsub("-",".",$15);print ">"$1"\n"$14"\n>"$2"\n"$15}' | fa2aln.pl - > test_aln.aln
-  TESTCONS=`RNAalifold -p -d2 --noLP < test_aln.aln 2> /dev/null | sed -n 2p | cut -d" " -f1` 
-  #tail -3 test_aln.aln | head -2 | awk -v cons=$TESTCONS 'BEGIN{OFS="\t"}{print $1,$2,cons}' | awk 'BEGIN{OFS="\n"}{print ">"$1,$2,">structure",$3}' | removeBPInAlignment.pl - | awk 'BEGIN{ORS=""}{if(NR==1 || NR==5){ sub(/^>/,"");print $1"\t" }else{ if(NR==2 || NR==6 ){ gsub(/\./,"-");print $1"\t"}else{ if(NR==4 || NR==8){ print $1"\n" } } }}' > test.ccinput
-  tail -3 test_aln.aln | head -2 | awk -v cons=$TESTCONS 'BEGIN{OFS="\t"}{print $1,$2,cons}' > test.ccinput
-  structureCC -f=test.ccinput ref.ccinput | awk 'BEGIN{s=0}{s=s+$8}END{if(NR==0){print "0"}else{cc=s/NR;if(cc<0){cc=0};print cc}}' >> tmp.mcc.txt
+gunzip -c ${ptdotaligner}/output/dotaligner4tuning.out.csv.gz | sed 's/\.pp//g' | while read line; do
+  rfam1=${line%%,*};
+  temp=${line#*,};
+  rfam2=${temp%%,*};
+  #removebpinalignment.pl ref_${rfam1}__${rfam2}.fa | awk 'begin{ors=""}{if(nr==1 || nr==5){ sub(/^>/,"");print $1"\t" }else{ if(nr==2 || nr==6 ){ gsub(/\./,"-");print $1"\t" }else{ if(nr==4 || nr==8){ print $1"\n" } } }}' > ref.ccinput
+  awk 'begin{ors=""}{if(nr==1 || nr==5){ sub(/^>/,"");print $1"\t" }else{ if(nr==2 || nr==6 ){ gsub(/\./,"-");print $1"\t" }else{ if(nr==4 || nr==8){ print $1"\n" } } }}' ref_${rfam1}__${rfam2}.fa > ref.ccinput
+  echo $line | awk -f "," '{gsub("-",".",$14);gsub("-",".",$15);print ">"$1"\n"$14"\n>"$2"\n"$15}' | fa2aln.pl - > test_aln.aln
+  testcons=`rnaalifold -p2 -r < test_aln.aln 2> /dev/null | sed -n 2p | cut -d" " -f1` 
+  #tail -3 test_aln.aln | head -2 | awk -v cons=$testcons 'begin{ofs="\t"}{print $1,$2,cons}' | awk 'begin{ofs="\n"}{print ">"$1,$2,">structure",$3}' | removebpinalignment.pl - | awk 'begin{ors=""}{if(nr==1 || nr==5){ sub(/^>/,"");print $1"\t" }else{ if(nr==2 || nr==6 ){ gsub(/\./,"-");print $1"\t"}else{ if(nr==4 || nr==8){ print $1"\n" } } }}' > test.ccinput
+  tail -3 test_aln.aln | head -2 | awk -v cons=$testcons 'begin{ofs="\t"}{print $1,$2,cons}' > test.ccinput
+  structurecc -f=test.ccinput ref.ccinput | awk 'begin{s=0}{s=s+$8}end{if(nr==0){print "0"}else{cc=s/nr;if(cc<0){cc=0};print cc}}' >> tmp.mcc.txt
 done
-paste <(gunzip -c ${PTDOTALIGNER}/output/dotaligner4tuning.out.csv.gz) tmp.mcc.txt | awk '{print $1","$2}' | gzip > tmp.dotaligner4tuning.csv.gz
-mv tmp.dotaligner4tuning.csv.gz ${PTDOTALIGNER}/output/dotaligner4tuning.out.csv.gz
+paste <(gunzip -c ${ptdotaligner}/output/dotaligner4tuning.out.csv.gz) tmp.mcc.txt | awk '{print $1","$2}' | gzip > tmp.dotaligner4tuning.csv.gz
+mv tmp.dotaligner4tuning.csv.gz ${ptdotaligner}/output/dotaligner4tuning.out.csv.gz
+
+#analyze data
+#K A B R T L S M SEQALN
+gunzip -c ${ptdotaligner}/output/dotaligner4tuning.out.csv.gz | awk '{gsub(/,/,"\t");print $0}' | sort -k18gr | less
+gunzip -c output/dotaligner4tuning.out.csv.gz | awk '{gsub(/,/,"\t");print $0}' > dotaligner4tuning.out.tab
+uniqCol1concatCol2.pl dotaligner4tuning.out.tab 4,5,6,7,8,9,10,11,12 17 > dotaligner4tuning.concat_sci
+niqCol1concatCol2.pl dotaligner4tuning.out.tab 4,5,6,7,8,9,10,11,12 16 > dotaligner4tuning.concat_time
+paste <(awk '{split($10,a,",");l=length(a);s=0;for(i=1;i<=l;i++){s+=a[i]};print $0,(s/l)}' dotaligner4tuning.concat_sci | awk 'BEGIN{OFS="\t"}{print $1,$2,$3,$4,$5,$6,$7,$8,$9,$11}' | sort) <(awk '{split($10,a,",");l=length(a);s=0;for(i=1;i<=l;i++){s+=a[i]};print $0,(s/l)}' dotaligner4tuning.concat_time | awk 'BEGIN{OFS="\t"}{print $1,$2,$3,$4,$5,$6,$7,$8,$9,$11}' | sort) | awk 'BEGIN{OFS="\t"}{print $1,$2,$3,$4,$5,$6,$7,$8,$9,$10,$20}' > dotaligner4tuning.concat_sci_time
+sort -k10gr dotaligner4tuning.concat_sci_time | head
+#PSI<=50, PSI>50
+gunzip -c dotaligner4tuning.out.csv.gz | awk '{gsub(/,/,"\t");print $0}' | awk '$3<=50' > dotaligner4tuning_le50.out.tab
+gunzip -c dotaligner4tuning.out.csv.gz | awk '{gsub(/,/,"\t");print $0}' | awk '$3>50' > dotaligner4tuning_g50.out.tab
+PSI="le50"
+#PSI="g50"
+uniqCol1concatCol2.pl dotaligner4tuning_${PSI}.out.tab 4,5,6,7,8,9,10,11,12 17 > dotaligner4tuning_${PSI}.concat_sci
+awk '{split($10,a,",");l=length(a);s=0;for(i=1;i<=l;i++){s+=a[i]};print $0,(s/l)}' dotaligner4tuning_${PSI}.concat_sci | sort -k11gr | awk 'BEGIN{OFS="\t"}{print $1,$2,$3,$4,$5,$6,$7,$8,$9,$11}' | head
+awk '{split($10,a,",");l=length(a);s=0;for(i=1;i<=l;i++){s+=a[i]};print $0,(s/l)}' dotaligner4tuning_${PSI}.concat_sci | sort -k11gr | awk 'BEGIN{OFS="\t"}{print $1,$2,$3,$4,$5,$6,$7,$8,$9,$11}' | awk '$1==0.3 && $2==-0.2 && $3==0 && $4==0 && $5==0.25 && $6==0 && $7==0 && $8==25 && $9=="FALSE"'
+#0.3     -0.2    0       0       0.25    0       0       25      FALSE   0.687172        16.592
+#0.3     -0.2    0       0       0.25    0       0       15      FALSE   0.672142        10.3302
+#0.3     -0.2    0       0       0.25    0       FALSE   15      TRUE    0.662123        10.26
+#PSI<=50
+#0.3	-0.2	0	0	0.25	0	0	25	FALSE	0.482146
+#PSI>50
+#0.3	-0.2	0	0	0.25	0	0	25	FALSE	0.789686
+#
+#
+#0.5     -0.2    0       5       0.25    0.5     0       25      FALSE   0.672758        16.6618
+#0.5     -0.2    0       5       0.25    0.5     15      25      FALSE   0.672329        19.556
+#0.5     -0.2    0       5       0.25    0.5     0       15      FALSE   0.662917        10.3457
+#0.5     -0.2    0       10      0.25    0.5     15      15      FALSE   0.662642        13.5167
+#PSI<=50
+#0.5     -0.2    0       5       0.25    0.5     0       25      FALSE   0.447114
+#0.5     -0.2    0       0       0.25    0.5     0       25      FALSE   0.446739
+#0.5     -0.2    0       0       0.25    0.5     15      15      FALSE   0.423004
+#0.5     -0.2    0       10      0.25    0.5     15      15      FALSE   0.423004
+#0.5     -0.2    0       5       0.25    0.5     15      15      FALSE   0.423004
+#
+#PSI>50
+#0.5     -0.2    0       5       0.25    0.5     15      25      FALSE   0.793983
+#0.5     -0.2    0       5       0.25    0.5     FALSE   25      TRUE    0.793983
+#0.5     -0.2    0       5       0.25    0.5     0       15      FALSE   0.784251
+#0.5     -0.2    0       5       0.25    0.5     FALSE   15      TRUE    0.784251
 
 #draw some beautiful graphs
-gunzip -c ${PTDOTALIGNER}/output/dotaligner4tuning.out.csv.gz | awk '{gsub(/,/,"\t");print $0}' | sort -k18gr | less
 
