--- a/analysis/pmcomp/README
+++ b/analysis/pmcomp/README
@@ -1,13 +1,19 @@
 HDOTALIGNER=/home/stesee/DotAligner
+PROG=pmcomp
+#DATA=seed_10_55.new
+DATA=seed_56_95.new
+#NRSPLIT=120
+NRSPLIT=126
+
 #module load /share/ClusterShare/Modules/modulefiles/contrib/gi/ViennaRNA/2.1.3
 #RNAfold -p2 --noLP
 
 #get 192 job commands
-./runPMCOMP4Benchmark_seed_10_55.sh > testit.sh
-split -l 147 -a 3 -d testit.sh ${HDOTALIGNER}/analysis/pmcomp/jobs/pmcomp4benchmark
+./runPMCOMP4Benchmark.sh $DATA > testit.sh
+split -l $NRSPLIT -a 3 -d testit.sh ${HDOTALIGNER}/analysis/${PROG}/jobs/${PROG}4benchmark_${DATA}_
 rm testit.sh
-for i in `perl -e '{for(my $i=0; $i<192; $i++){printf("%03i ",$i)}}'`; do cat jobs/pmcomp4benchmark${i} | awk -v i=$i '{gsub("seed_10_55.pmcomp","seed_10_55.pmcomp"i); print $0}' > tmp.out; mv tmp.out jobs/pmcomp4benchmark${i}; j=`echo "" | awk -v i=$i '{print ++i}'`; mv jobs/pmcomp4benchmark${i} jobs/pmcomp4benchmark_${j}; done
-chmod 744 jobs/pmcomp4benchmark*
+for i in `perl -e '{for(my $i=191; $i>=0; $i--){printf("%03i ",$i)}}'`; do cat jobs/${PROG}4benchmark_${DATA}_${i} | awk -v i=$i -v data=$DATA -v prog=$PROG '{gsub(data"."prog,data"."prog""i); print $0}' > tmp.out; mv tmp.out jobs/${PROG}4benchmark_${DATA}_${i}; j=`echo "" | awk -v i=$i '{print i+1}'`; mv jobs/${PROG}4benchmark_${DATA}_${i} jobs/${PROG}4benchmark_${DATA}_${j}; done
+chmod 744 jobs/${PROG}4benchmark_${DATA}*
 #submit jobs
-qsub -q all.q -N pm4ben -t 1-191 job_launch_pmcomp.sge
+qsub -q all.q -N ${PROG}4ben -t 1-192 job_launch_${PROG}.sge
 
