--- a/analysis/foldalign/README
+++ b/analysis/foldalign/README
@@ -15,3 +15,11 @@ chmod 744 jobs/${PROG}4benchmark_${DATA}*
 qsub -q all.q -N ${PROG}4ben -t 1-192 job_launch_${PROG}.sge
 #merge results
 for i in `perl -e '{for(my $i=0; $i<=190; $i++){printf("%03i ",$i)}}'`; do cat ${DATA}.${PROG}${i} >> ${DATA}.${PROG}; done
+gunzip -c ${DATA}.${PROG}.gz | awk 'BEGIN{OFS=","}{ if($2=="ALIGNING"){ s1=$3;s2=$5 }; if($3=="Score:"){ sc=$4 } if($1=="user"){ split($2,c,"m");sub("s","",c[2]);time=60*c[1]+c[2]; print s1,s2,sc,time }; }' | gzip > ${DATA}.${PROG}.csv.gz
+
+#pvclust
+gunzip -c ${DATA}.${PROG}.csv.gz | awk '{gsub(/,/,"\t");if($1==$2){print $1,$2,$3}else{print $1,$2,$3"\n"$2,$1,$3}}' | sort -k1,2 | awk 'BEGIN{ORS=""}{print $3," "; if(NR%154 == 0){print "\n"}}' > ${DATA}.${PROG}.2x2
+gunzip -c ${DATA}.${PROG}.csv.gz | awk '{gsub(/,/,"\t");if($1==$2){print $1,$2,$3}else{print $1,$2,$3"\n"$2,$1,$3}}' | cut -d" " -f1 | sort -u | awk '{split($1,a,"_");print a[1]}' > ${DATA}.identifier
+#submit job
+qsub -q all.q -N pc4${PROG} job_launch_pvclust.sge
+
